# serializer version: 1
# name: TestContract.test_should_return_same_hash_in_different_processes[column]
  2158421768275916388
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[constant]
  795242721712471450
# ---
